feat(api): added api tests
